# Imitate_Fighting

./: CMakeLists.txt  README.md
Inc/: Action.h  Architect.h  Hero.h  Infantry.h  Sentinel.h  Tick_Simulate.h  TypeDefine.h  main.h  robot.h
Src/: Action.cpp  Architect.cpp  Architect_Init.cpp  Hero.cpp  Infantry.cpp  Sentinel.cpp  Tick_Simulate.cpp  main.cpp  robot.cpp  robot_init.cpp
